on dol - and link to technical practices

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -553,15 +553,9 @@ In summary, some GDPs allow the spacial exploration of design in a way that suit
 The following exchange between participants Ed and Mark  shows GDPs being used to try to organise future activity.
 <!-- Online version as table - https://docs.google.com/document/d/1wLx8j9djYqJdZHwKJ09mmIDMYO7YqlMDhuHx2hiqpJI/edit -->
 
-At this stage of their process, some of these patterns have been discussed and sketched out some started but only partially completed. For example, the child has designed different frames of animation but this has not been exported to the right format or implemented in code form. This interchange shows a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise one work to be done. This tension is outlined when the parent gives an update on progress.
+At this stage of their process, some of these patterns have been discussed and sketched out some started but only partially completed. For example, the child has designed different frames of animation but this has not been exported to the right format or implemented in code form. This interchange shows a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise one work to be done. This tension is outlined when a parent Mark gives an update on progress. "So, we’ve made quite a lot of progress this week. I think the issue we’re having is that Fi’s super excited so we’re kind of jumping from one thing to another and that’s kinda overwhelming me a bit."
 
-    Mick: Hello.
-    Mark: Hi Mick.
-    Mark: So, we’ve made quite a lot of progress this week. I think the issue we’re having is that Fi’s super excited so we’re kind of jumping from one thing to another and that’s kinda overwhelming me a bit.
-
-The parent seems to lack a process to map these out and then to work together to prioritise them. Instead he appears to be keen to quickly pick one. His suggested process is to then work through the documentation on that pattern.
-
-
+An earlier interaction illustrates this.
 
     TURN IN TO TABLE WITH DESCRIPTION?
     Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
@@ -578,9 +572,8 @@ The parent seems to lack a process to map these out and then to work together to
     Long pause.
     Mark: Well I’ll have a look at the code and see if I can make sense of that. -->
 
-The child's initial listing of features is a brainstorming technique. Such techniques are used to aid a creative process. Ed appears reluctant to both work on adapt a the working process suggested by his father.
+The child's initial listing of features is a brainstorming technique. Such techniques are used to aid a creative process. This example shows the use of the approximate names of a number of game design patterns by the child adult. These are _get the person animated_, _get an enemy in_, _changing the platforms into something different_, _make a theme tune_. However while this use of terms shows the promise of the use use of GDPs as conceptual short cuts to aid planning and  prioritisation, the process is still not unproblematic. The parent seems to lack a process to map these out and then to work together to prioritise them.  Instead he appears to be keen to quickly pick one.  His suggested process is to then work through the documentation on that pattern. Ed appears reluctant to both work on adapt a the working process suggested by his father. Hence, the next section continues to explore this interaction in an exploration of the division of labour between participants.
 
-At this point the parent engages with a print out of supporting documentation on added an animation to the main character. This example shows the use of the approximate names of a number of game design patterns by the child adult. These are _get the person animated_, _get an enemy in_, _changing the platforms into something different_, _make a theme tune_.
 
 <!-- Patterns and the multiple actions and operations they entail are referred to briefly using short cut names.   -->
 
@@ -619,9 +612,11 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
 
-**Participants can split work and resolve working blockages by allocating different GDPs or parts thereof.**
+**Participants can split work and resolve problems in a variety of ways. GDPs can feature in this process in various ways**
 
-Different pairs approached division of labour in various ways. In a later example, we see how although Molly and her daughter Nadine are working on different projects on a fair distance from each other, Molly relies on Nadine 's coding help.
+This section explores different approaches to division of labour. Mark and Ed work closely together, Suzanne helps Olivia alternate between points of low and high engagement with coding process, and Molly and her daughter Nadine are work on different projects in different parts of the room but still interact at key points.
+
+**Working knowlege of GDPs can help participants to divide project elements**
 
 In the last section, Mark and Ed used GDPs to attempt to prioritise work. However, following this Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In the next exchange, they progress to more successfully divide their labour informally.
 
@@ -643,10 +638,10 @@ THIS DOESN'T SEEM RIGHT
 Or perhaps the parent steers the child into graphical areas as they are able to continue without stressing out the parent. Thus the child's
 compliance may be a kind or pragmatic decision to allow smoother progress. -->
 
-The father describes previous lack of prioritisation as 'skipping around like that' or 'jumping all over the place' as 'overwhelming' the child seems happy to takes a more piecemeal approach. The child suggests a possible resolution to the current blockage. He suggests splitting and using one laptop each. He names one of the other pattern. The familiarity with GDPs facilitates  the young person to direct an informal division on labour. The child continues to work on parallel patterns or component actions of pattern using tools and processes which he is more familiar with. This child also begins researching other toolsets, in this session, research to identify an online tool to create an short audio soundtrack. This serves the child as it allows them to avoid waiting for their father and moving different parts of the overall project forward.
+The father describes previous behaviour which showed issues involving
+prioritisation as 'skipping around like that' or 'jumping all over the place' as 'overwhelming'. The child seems to suggest a more piecemeal approach. The child suggests a possible resolution to the current blockage. He suggests splitting and using one laptop each. He names one of the other pattern. The familiarity with GDPs facilitates  the young person to direct an informal division on labour. The child continues to work on parallel patterns or component actions of pattern using tools and processes which he is more familiar with. This child also begins researching other toolsets, in this session, research to identify an online tool to create an short audio soundtrack. This serves the child as it allows them to avoid waiting for their father and moving different parts of the overall project forward.
 
 The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or peers, For example in this case the child appears to make a tactical decision allowing the father to decipher technical instructions and implement them in the code of their game as they creating assets in non-code / GUI environments.
-
 
 Sh and Olivia relied on the parent to do the majority of code implementation and shared one computer. The opening vignette shows the child use the name of a GDP as a way to communicate about the shared work of making a game.
 
@@ -661,55 +656,15 @@ The utterance by the child "Key Door Person"  work on the game design pattern ca
 
 The parent outlines her strategies used to address lack of reading ability as a barrier to participation. The design choice of a grid of letters representing different elements of the platform game appears appropriate in the case of a novice learning to code and read at the same time.  After the child has delegated a coding task to her mother she undertakes other activities. At times her activities directly contribute to the main goal of game making. At times the parent asked the child to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times she engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
-<!--
-NOTE - MOVE TO LATER CHAPTER AS ILLUSTRATIVE OF FLEXIBLE DESIGN?
 
- While the father was keen to prioritise and then complete one pattern, the child takes a more piecemeal approach. Later in the session the father then gets drawn into creating audio assets after observing his son searching for suitable tools. The father becomes distracted from his stated task as he is responsive to help the child when they get stuck on an alternative pathway they have chosen to avoid waiting on the parent. While this may be stressful for the parent, lots of progress in the overall game project can be observed in any particular session and the child seems to be developing useful skills managing the parent. -->
- <!-- both with the familiar graphical asset tool Piskel and exploring new territory by researching an seeking a new tool for creating audio assets, specifically a background theme tune . -->
-
- <!-- While there was no formal organising of groups in phase 2 and 3, the family bonds between parents and children created similar patterns of seeking validation, sharing planning. Although this was more the case for dyads working side-by-side on the same game, similar patterns existed for other configurations. -->
-
-<!-- MORE EXAMPLES  ? -->
-<!--
-NOTE - check if this fits
-Once the code for the new game mechanic has been added, the child is guided to take on challenge of making smaller changes that give rapid feedback.  To aid the process the parent navigates to a particular part of the code for child to alter design. The changes the child makes have a large impact on the end users experience.
- -->
-
-NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
-
-While the child's activity away from the screen and the main objective of coding and creating assets for their game could in a conventional educational model be seen an non-productive, in a community model of learning this can be interpreted differently. For example as legitimate peripheral activity [@lave_situating_1991], or as an observation stage of LOPI model [@rogoff_learning_2014].  The possibility for children to not engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
-
-<!-- COMMENTARY /WITH A FOCUS ON AGENCY -->
-
-These divisions of labour seem beneficial for many participants however complex tensions emerge between varied goals as focal activities shift. Study of there interactions show the parents and children adopting varied strategies to navigate solutions to these tensions. The complexities of this design process are explored in more depth in the following discussion chapter.
-
-LINK CAN RETURN TO MOLLY AND NADINE TO LOOK AT THEIR DIVISION OF LABOUR AND EXPLORE THE LINK TO THE ADOPTION OF TECHNICAL PROCESS
-
-<!-- NOTE - LINK TO PREVIOUS CHAPTER ON FLEXIBILITY OF DESIGN -->
-
-<!-- In a following example we see child Nadine helping her mother to overcome coding blockages. -->**
-<!--
-A SECTION HERE THAT COULD BE REPLACED.
-Molly and Nadine had a reverse relationship where the child would reluctantly implement the graphical changes in code but would pointedly not explain them seemingly taking pride in knowing something that her mother didn't.
-ADD TRANSCRIPT EXAMPLE FROM  - 49:52.2 - 53:38.0 - 2019-03-18-mi
-Here the child has a powerful position but misses a chance to develop useful communication skills.
-
-The parent here takes great pride in the graphical work being done. This allows them a level of participation which is helpful without being stuck on more tricky technical or code related problems.
-The design which allows choice of GDPs facilitates this. The process of building an identity as an individual or a family is shown in this families work on graphics.
-
-ADD TRANSCRIPT EXAMPLE FROM  -  2019-03-18-mi
-Molly - Oh thank you very much. I'm very proud.
- -->
+NOTE: FIND A GOOD PLACE FOR THIS - LATER?
+While Olivia's activity away from the screen and the main objective of coding and creating assets for their game could in a conventional educational model be seen an non-productive, in a community model of learning this can be interpreted differently. For example as legitimate peripheral activity [@lave_situating_1991], or as an observation stage of LOPI model [@rogoff_learning_2014].  The possibility for children to not engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
 
 
-### GDP used to guide tool use and emerging technical processes
 
-**The emergence and propagation of new technical processes particularly in tool use, motivated by a drive to implement or complete a GDP often happen informally between peers.**
-
-The processes are not static but are modified by the community as they are adopted and passed on. Some processes are introduced in a basic form through scaffolded activities like those provoked by the quick start cards. For some groups, they were introduced explicitly as a parent explains, facilitates or guides a process or at times technical processes are passed on informally in more casual help interactions as illustrated in the following example.
+These examples illustrate the varied strategies to  divisions of labour that parents and children adopt. While  seem beneficial for many participants however complex tensions in activity emerge. For example  Molly and Nadine reversed traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPS but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
 
     NOTE - COVERT TO TABLE?
-    NOTE - this is a secondary examples - where GDPs as a concept are not vital.
 
     Molly continues to do solo design using the Piskel graphical too. She encounters a design problem. When erasing a part of the design she gets rid of background colour. Molly asks for help from partner but receives misleading advice which does not help her progress.
     Molly:  Oh no it’s not done that has it?
@@ -732,6 +687,69 @@ The processes are not static but are modified by the community as they are adopt
     Molly: So am I like back with the black now?
     Nadine : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
     Molly: Oh X. Alright Bubs. Thanks.
+
+
+    <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
+
+Here the child has a powerful position and seems to enjoy this. In contrast the parent explains her frustration but does this light heartedly.
+
+In terms of division of labour, the interaction here is complex.
+Both the parent and child here takes great pride in the graphical work of game making. The parent shows this after being complemented by a fellow parent on graphical design saying "Thank you I'm very proud".
+
+This allows them a level of participation which is helpful without being stuck on more tricky technical or code related problems.
+
+The child also specialises in this aspect spending much time on this aspect. This interaction show her demonstrating to her mother on request proficiency in tool use, another example shows this in asset migration.
+
+
+This example shows  a practical division of labour based on the building of emerging skills and technical processes. The learning design which prioritises choice of different GDPs facilitates this. The process here illuminate the process of  building an identity as an individual or a family is. The next section develops this theme.
+
+
+
+<!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
+
+
+
+<!-- COMMENTARY /WITH A FOCUS ON AGENCY -->
+
+
+
+<!-- NOTE - LINK TO PREVIOUS CHAPTER ON FLEXIBILITY OF DESIGN -->
+
+<!-- In a following example we see child Nadine helping her mother to overcome coding blockages. -->**
+<!--
+A SECTION HERE THAT COULD BE REPLACED.
+
+
+ADD TRANSCRIPT EXAMPLE FROM  -  2019-03-18-mi
+Molly - Oh thank you very much. I'm very proud.
+ -->
+
+
+
+<!--
+NOTE - MOVE TO LATER CHAPTER AS ILLUSTRATIVE OF FLEXIBLE DESIGN?
+
+ While the father was keen to prioritise and then complete one pattern, the child takes a more piecemeal approach. Later in the session the father then gets drawn into creating audio assets after observing his son searching for suitable tools. The father becomes distracted from his stated task as he is responsive to help the child when they get stuck on an alternative pathway they have chosen to avoid waiting on the parent. While this may be stressful for the parent, lots of progress in the overall game project can be observed in any particular session and the child seems to be developing useful skills managing the parent. -->
+ <!-- both with the familiar graphical asset tool Piskel and exploring new territory by researching an seeking a new tool for creating audio assets, specifically a background theme tune . -->
+
+ <!-- While there was no formal organising of groups in phase 2 and 3, the family bonds between parents and children created similar patterns of seeking validation, sharing planning. Although this was more the case for dyads working side-by-side on the same game, similar patterns existed for other configurations. -->
+
+<!-- MORE EXAMPLES  ? -->
+<!--
+NOTE - check if this fits
+Once the code for the new game mechanic has been added, the child is guided to take on challenge of making smaller changes that give rapid feedback.  To aid the process the parent navigates to a particular part of the code for child to alter design. The changes the child makes have a large impact on the end users experience.
+ -->
+
+
+
+### GDP used to guide tool use and emerging technical processes
+
+**The emergence and propagation of new technical processes particularly in tool use, motivated by a drive to implement or complete a GDP often happen informally between peers.**
+
+The processes are not static but are modified by the community as they are adopted and passed on. Some processes are introduced in a basic form through scaffolded activities like those provoked by the quick start cards. For some groups, they were introduced explicitly as a parent explains, facilitates or guides a process or at times technical processes are passed on informally in more casual help interactions as illustrated in the previous example.
+
+
+
 
 <!-- Taking a more focused view of the activity here would be implementing a game design pattern - e.g. adding keys and doors pattern in this case. On the level of action, creating a graphical asset of a key and adding this to the level design. The operation would be the exporting the graphical asset as a suitable file format from graphical design tool and uploading it to the code authoring tool. -->
 
@@ -756,22 +774,6 @@ We can explore this behaviour from the child's perspective using terms from Acti
 the interaction also shows positive affect of child.
 her role in the community can be explored here. -->
 
-
-
-
-### Use of GDPs to support debugging and the product revision process
-
-_NOTE - This section is particularly underdeveloped at this stage_
-
-Many participants spent significant periods of time improving, testing and fixing coding errors in their games. Analysis of the coding of video data showed that revision and debugging was often a solo effort. In a way that mirrors the spread of other creative technical processes, certain revision and debugging practices that were transmitted through interaction with the facilitator that were adopted and used by the community. Some practices were straight-forward, for example the swift navigation between the source code window and a preview window of the live game. Others were more specialist like the use of the developer console of the internet browser to debug JavaScript errors or the process of hovering over red dots in the code playground to explore error messages.
-
-<!-- PERHAPS PULL UP DETAILS OF DEBUGGING. -->
-
-The experience of debugging appears to be a particular practice evoking certain feelings. Feelings of frustration alternate with elation at solving a tricky bug. As I built proficiency as a facilitator I began to identify different kinds of errors emerging as explored in the previous chapter. The use of code patching often provoked glitch bugs which where actually behaviour did not match intended behaviour. In analysis of interactions with participants when trying to solve coding blockages, I note different strategies in responding to such errors. For some participants I quickly solve them with short explanation to allow them to continue. For other participants who I judge to be receptive I may celebrate the glitch and explore with them the opportunities they provided to understand the related code in a way that allowed the exploration of more abstract concepts using a concrete example afforded by the mechanics of the game design pattern. The following section provides an example of this kind of interaction and examines the surfacing of computational thinking concepts in particular.
-
-<!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
-CAN i FIND ANY KEY EXAMPLES OF THIS?
--->
 
 
 #### Use of evolving GDP terminology to facilitate design practices -
@@ -809,7 +811,7 @@ The mother develops her proficiency of expressing GDP related concepts and langu
 
 
 
-### Other examples of GDP driving adoption of technical processes
+#### Other examples of GDP driving adoption of technical processes
 
 References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions. For example, after Ed gave feedback on the jump speed Mi's game, he continued by sharing a process to redundant space at the edges of design sprite characters.
 
@@ -841,6 +843,22 @@ Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small squ
 
 There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
 
+
+
+
+### Use of GDPs to support debugging and the product revision process
+
+_NOTE - This section is particularly underdeveloped at this stage_
+
+Many participants spent significant periods of time improving, testing and fixing coding errors in their games. Analysis of the coding of video data showed that revision and debugging was often a solo effort. In a way that mirrors the spread of other creative technical processes, certain revision and debugging practices that were transmitted through interaction with the facilitator that were adopted and used by the community. Some practices were straight-forward, for example the swift navigation between the source code window and a preview window of the live game. Others were more specialist like the use of the developer console of the internet browser to debug JavaScript errors or the process of hovering over red dots in the code playground to explore error messages.
+
+<!-- PERHAPS PULL UP DETAILS OF DEBUGGING. -->
+
+The experience of debugging appears to be a particular practice evoking certain feelings. Feelings of frustration alternate with elation at solving a tricky bug. As I built proficiency as a facilitator I began to identify different kinds of errors emerging as explored in the previous chapter. The use of code patching often provoked glitch bugs which where actually behaviour did not match intended behaviour. In analysis of interactions with participants when trying to solve coding blockages, I note different strategies in responding to such errors. For some participants I quickly solve them with short explanation to allow them to continue. For other participants who I judge to be receptive I may celebrate the glitch and explore with them the opportunities they provided to understand the related code in a way that allowed the exploration of more abstract concepts using a concrete example afforded by the mechanics of the game design pattern. The following section provides an example of this kind of interaction and examines the surfacing of computational thinking concepts in particular.
+
+<!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
+CAN i FIND ANY KEY EXAMPLES OF THIS?
+-->
 
 #### Code Patching as a guided process
 
